@@ -204,6 +204,10 @@
 				<code>DREpresentation</code> are now transient and volatile and computed from 
 				<code>DRepresentationDescriptor</code>
 			</li>
+			<li><span class="label label-info">Modified</span>The class 
+				<code>org.eclipse.sirius.business.api.helper.SiriusHelper</code> has been renamed into 
+				<code>org.eclipse.sirius.business.api.helper.RepresentationHelper</code>.
+			</li>
 			<li><span class="label label-danger">Removed</span> In 
 				<code>org.eclipse.sirius.business.api.session.CustomDataConstants</code>, the constants 
 				<code>DREPRESENTATION</code> and 
